--- a/index.html
+++ b/index.html
@@ -910,11 +910,8 @@
                         <div class="project-info">
                             <h2 class="project-title">The ML Lab</h2>
                             <p class="project-description">
-                                A collection of machine learning experiments and exploratory mini-projects.
-                                This repository serves as a playground for testing and experimenting with different techniques, architectures and approaches, spanning a 
-                                range of important topics such as supervised, unsupervised and reinforcement learning as well as topics like class imbalance, feature selction, dimensionalty reduction techniques and relevant statistical modesl.
-                                Its main purpose if documenting the learning journey and providing people with hands-on examples to learn from.
-                               
+                                A collection of machine learning experiments and exploratory mini-projects. This repository serves as a playground for testing a variety of techniques, architectures, and approaches across supervised, unsupervised, and reinforcement learning. 
+                                It also includes concepts like class imbalance, feature selection, dimensionality reduction, and key statistical models. Its main purpose is to document the learning journey and provide others with practical, hands-on examples.
                             </p>
                             <div class="project-details">
                                 <div class="detail-item">
