--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
                                 </div>
                             </div>
                             <div class="project-actions">
-                                <button class="btn" data-video="assets/CardioSegNet1.0_demo.mp4">Watch Demo</button>
+                                <button class="btn btn-secondary data-video="assets/CardioSegNet1.0_demo.mp4">Watch Demo</button>
                                 <a href="https://github.com/MK720-dev/CardioSegNet" class="btn btn-secondary">View Repository</a>
                             </div>
                         </div>
