--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
         .dropdown-wrapper {
             position: relative;
-            display: inline-block;
+            display: inline-flex;
         }
 
         .dropdown-btn {
