--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
                                 </div>
                             </div>
                             <div class="project-actions">
-                                <a href="https://github.com/MK720-dev/The-ML-Lab" class="btn">View Repository</a>
+                                <a href="https://github.com/MK720-dev/The-ML-Lab" class="btn btn-secondary">View Repository</a>
                             </div>
                         </div>
                     </div>
