--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             display: flex;
             gap: 60px;
             align-items: center;
-            justify-content: flex-start;
+            justify-content: center;
             box-sizing: border-box;
         }
 
