--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
         @media (max-width: 968px) {
             .carousel-slide {
                 flex-direction: column;
-                padding: 40px 30px;
+                padding: 40px 30px 100px;
             }
 
             .project-title {
