--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         .carousel-slide {
             min-width: 100%;
             flex-shrink: 0;
-            padding: 20px 20px 20px 20px;
+            padding: 10px 10px 40px 10px;
             display: flex;
             gap: 60px;
             align-items: center;
@@ -561,7 +561,7 @@
         @media (max-width: 968px) {
             .carousel-slide {
                 flex-direction: column;
-                padding: 40px 30px 100px;
+                padding: 40px 30px;
             }
 
             .project-title {
