--- a/index.html
+++ b/index.html
@@ -833,19 +833,19 @@
                     <div class="carousel-slide">
                         <div class="video-container">
                             <video autoplay muted loop>
-                                <source src="assets/CardioSegNet1.0_demo.mp4" type="video/mp4">
+                                <source src="assets/CardioSegNet2.0_demo.mp4" type="video/mp4">
                             </video>
                         </div>
                         <div class="project-info">
                             <h2 class="project-title">CardioSegNet (Phase 2)</h2>
                             <p class="project-description">
-                                Deep-learning pipeline for multi-class cardiac MRI segmentation using an enhanced U-Net architecture. 
-                                Extended the baseline model to a four-level encoder–decoder network operating on full-resolution 256×256 slices, 
-                                enabling simultaneous segmentation of the left ventricle, right ventricle, and myocardium. 
-                                Incorporated batch-normalized convolutional blocks, symmetric skip connections, and a region-aware hybrid loss 
-                                combining Sparse Categorical Cross-Entropy and multi-class Dice, improving class balance and anatomical overlap. 
-                                Achieved a peak validation Dice score of 0.91 with early convergence and stable training dynamics. 
-                                Integrated the model into an interactive Dash/Plotly visualization system, supporting per-slice navigation, 
+                                Deep-learning pipeline for multi-class cardiac MRI segmentation using an enhanced U-Net architecture.
+                                Extended the baseline model to a four-level encoder–decoder network operating on full-resolution 256×256 slices,
+                                enabling simultaneous segmentation of the left ventricle, right ventricle, and myocardium.
+                                Incorporated batch-normalized convolutional blocks, symmetric skip connections, and a region-aware hybrid loss
+                                combining Sparse Categorical Cross-Entropy and multi-class Dice, improving class balance and anatomical overlap.
+                                Achieved a peak validation Dice score of 0.91 with early convergence and stable training dynamics.
+                                Integrated the model into an interactive Dash/Plotly visualization system, supporting per-slice navigation,
                                 class-specific overlays, and direct qualitative comparison between baseline and advanced models.
                             </p>
                             <div class="project-details">
@@ -859,7 +859,7 @@
                                 </div>
                             </div>
                             <div class="project-actions">
-                                <button class="btn" data-video="assets/CardioSegNet1.0_demo.mp4">Watch Demo</button>
+                                <button class="btn" data-video="assets/CardioSegNet2.0_demo.mp4">Watch Demo</button>
                                 <a href="https://github.com/MK720-dev/CardioSegNet" class="btn btn-secondary">View Repository</a>
                             </div>
                         </div>
@@ -1467,6 +1467,11 @@
                 💻 <a href="https://github.com/MK720-dev">GitHub</a>
             </p>
         </section>
+
+        <!-- Test video -->
+        <video autoplay muted loop controls style="width: 400px; margin: 40px;">
+            <source src="assets/CardioSegNet1.0_demo.mp4" type="video/mp4">
+        </video>
 
     </div>
 
