--- a/index.html
+++ b/index.html
@@ -1470,7 +1470,7 @@
 
         <!-- Test video -->
         <video autoplay muted loop controls style="width: 400px; margin: 40px;">
-            <source src="assets/CardioSegNet1.0_demo.mp4" type="video/mp4">
+            <source src="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/CardioSegNet1.0_demo.mp4" type="video/mp4">
         </video>
 
     </div>
