--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                     <div class="carousel-slide">
                         <div class="video-container">
                             <video autoplay muted loop>
-                                <source src="assets/CardioSegNet2.0_demo.mp4" type="video/mp4">
+                                <source src="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/CardioSegNet2.0_demo.mp4" type="video/mp4">
                             </video>
                         </div>
                         <div class="project-info">
@@ -859,7 +859,7 @@
                                 </div>
                             </div>
                             <div class="project-actions">
-                                <button class="btn" data-video="assets/CardioSegNet2.0_demo.mp4">Watch Demo</button>
+                                <button class="btn" data-video="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/CardioSegNet2.0_demo.mp4">Watch Demo</button>
                                 <a href="https://github.com/MK720-dev/CardioSegNet" class="btn btn-secondary">View Repository</a>
                             </div>
                         </div>
@@ -868,7 +868,7 @@
                     <div class="carousel-slide">
                         <div class="video-container">
                             <video autoplay muted loop>
-                                <source src="assets/CardioSegNet1.0_demo.mp4" type="video/mp4">
+                                <source src="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/CardioSegNet1.0_demo.mp4" type="video/mp4">
                             </video>
                         </div>
                         <div class="project-info">
@@ -890,7 +890,7 @@
                                 </div>
                             </div>
                             <div class="project-actions">
-                                <button class="btn" data-video="assets/CardioSegNet1.0_demo.mp4">Watch Demo</button>
+                                <button class="btn" data-video="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/CardioSegNet1.0_demo.mp4">Watch Demo</button>
                                 <a href="https://github.com/MK720-dev/CardioSegNet" class="btn btn-secondary">View Repository</a>
                             </div>
                         </div>
@@ -900,7 +900,7 @@
                     <div class="carousel-slide">
                         <div class="video-container">
                             <video autoplay muted loop>
-                                <source src="assets/OptimizerArenaDemo1.mp4" type="video/mp4">
+                                <source src="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/OptimizerArenaDemo1.mp4" type="video/mp4">
                             </video>
                         </div>
                         <div class="project-info">
@@ -926,8 +926,8 @@
                                         Watch Demo
                                     </button>
                                     <div class="dropdown-menu" id="dropdownMenu">
-                                        <div class="dropdown-item" data-video="assets/OptimizerArenaDemo1.mp4">Video 1</div>
-                                        <div class="dropdown-item" data-video="assets/OptimizerArenaDemo2.mp4">Video 2</div>
+                                        <div class="dropdown-item" data-video="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/OptimizerArenaDemo1.mp4">Video 1</div>
+                                        <div class="dropdown-item" data-video="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/OptimizerArenaDemo2.mp4">Video 2</div>
                                     </div>
                                 </div>
                                 <a href="https://github.com/MK720-dev/OptimizerArena" class="btn btn-secondary">View Repository</a>
@@ -940,7 +940,7 @@
                         <div class="video-container">
                             <video autoplay muted loop>
                                 <!-- Placeholder - replace with your video when available -->
-                                <source src="assets/TheMLab_demo.mp4" type="video/mp4">
+                                <source src="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/TheMLab_demo.mp4" type="video/mp4">
                             </video>
                         </div>
                         <div class="project-info">
@@ -1467,11 +1467,6 @@
                 💻 <a href="https://github.com/MK720-dev">GitHub</a>
             </p>
         </section>
-
-        <!-- Test video -->
-        <video autoplay muted loop controls style="width: 400px; margin: 40px;">
-            <source src="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/CardioSegNet1.0_demo.mp4" type="video/mp4">
-        </video>
 
     </div>
 
