Added technical report for Optimizer Comparison

--- a/index.html
+++ b/index.html
@@ -903,13 +903,16 @@
                                 <source src="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/OptimizerArenaDemo1.mp4" type="video/mp4">
                             </video>
                         </div>
+
                         <div class="project-info">
                             <h2 class="project-title">OptimizerArena</h2>
+
                             <p class="project-description">
-                                Interactive platform for defining and training deep neural neywork architectures on a range of different tasks and visualizing the respective loss landscapes and optimization trajectories.
-                                Compare different optimizers in real-time, explore how they navigate complex loss
-                                surfaces, and gain intuition about optimization dynamics in machine learning.
+                                Interactive platform for defining and training deep neural network architectures on a range of tasks,
+                                while visualizing loss landscapes and optimization trajectories. Compare optimizers in real time,
+                                explore how they navigate complex loss surfaces, and build intuition about optimization dynamics.
                             </p>
+
                             <div class="project-details">
                                 <div class="detail-item">
                                     <span class="detail-label">Technology:</span>
@@ -920,20 +923,37 @@
                                     <span>Demo Available</span>
                                 </div>
                             </div>
+
                             <div class="project-actions">
                                 <div class="dropdown-wrapper">
                                     <button class="dropdown-btn" id="watchDemoBtn">
                                         Watch Demo
                                     </button>
                                     <div class="dropdown-menu" id="dropdownMenu">
-                                        <div class="dropdown-item" data-video="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/OptimizerArenaDemo1.mp4">Video 1</div>
-                                        <div class="dropdown-item" data-video="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/OptimizerArenaDemo2.mp4">Video 2</div>
+                                        <div class="dropdown-item"
+                                             data-video="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/OptimizerArenaDemo1.mp4">
+                                            Video 1
+                                        </div>
+                                        <div class="dropdown-item"
+                                             data-video="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/OptimizerArenaDemo2.mp4">
+                                            Video 2
+                                        </div>
                                     </div>
                                 </div>
-                                <a href="https://github.com/MK720-dev/OptimizerArena" class="btn btn-secondary">View Repository</a>
+
+                                <a href="https://github.com/MK720-dev/OptimizerArena"
+                                   class="btn btn-secondary">
+                                    View Repository
+                                </a>
+
+                                <a href="assets/Malek_Kchaou_Writing_Sample.pdf"
+                                   class="btn btn-secondary">
+                                    Technical Report
+                                </a>
                             </div>
                         </div>
                     </div>
+
 
                     <!-- Slide 4: The ML Lab -->
                     <div class="carousel-slide">
