Updated Achievements sectio  with UGRA

--- a/index.html
+++ b/index.html
@@ -1470,6 +1470,7 @@
             <h2>Achievements</h2>
 
             <ul>
+                <li><strong>Undergraduate Research Award (UGRA)</strong> — Mathematics Department, University of Kansas (Awarded for Spring 2026)</li>
                 <li><strong>UPE Honors Society</strong> — Inducted for academic excellence in computing.</li>
                 <li><strong>Black Babcock Scholarship</strong> — Awarded for high performance in mathematics and computing.</li>
                 <li><strong>May Landis Mathematics Scholarship</strong> — Recognized for excellence and potential in mathematics.</li>
