Update cardio seg net 2 demo video

--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                     <div class="carousel-slide">
                         <div class="video-container">
                             <video autoplay muted loop>
-                                <source src="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/CardioSegNet2.0_demo.mp4" type="video/mp4">
+                                <source src="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.1.1/CardioSegNet2.0_demo.online-video-cutter.com.mp4" type="video/mp4">
                             </video>
                         </div>
                         <div class="project-info">
@@ -859,7 +859,7 @@
                                 </div>
                             </div>
                             <div class="project-actions">
-                                <button class="btn" data-video="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.0.0/CardioSegNet2.0_demo.mp4">Watch Demo</button>
+                                <button class="btn" data-video="https://github.com/MK720-dev/MK720-dev.github.io/releases/download/v1.1.1/CardioSegNet2.0_demo.online-video-cutter.com.mp4">Watch Demo</button>
                                 <a href="https://github.com/MK720-dev/CardioSegNet" class="btn btn-secondary">View Repository</a>
                             </div>
                         </div>
