--- a/index.html
+++ b/index.html
@@ -351,6 +351,21 @@
                 color: #374151;
             }
 
+        .btn-report {
+            background: transparent;
+            color: #365dd6;
+            border: 1.5px solid #c7d2fe;
+            font-weight: 600;
+        }
+
+            .btn-report:hover {
+                background: #eef3ff;
+                border-color: #365dd6;
+                color: #365dd6;
+                box-shadow: 0 4px 12px rgba(54,93,214,0.15);
+            }
+
+
         .dropdown-wrapper {
             position: relative;
             display: inline-flex;
@@ -590,6 +605,7 @@
                 right: 10px;
             }
         }
+
     </style>
 
     <script>
@@ -946,10 +962,12 @@
                                     View Repository
                                 </a>
 
-                                <a href="assets/Malek_Kchaou_Writing_Sample.pdf"
-                                   class="btn btn-secondary">
-                                    Technical Report
+                                <a href="assets/OptimizerArena_Optimization_Report.pdf"
+                                   class="btn btn-report"
+                                   target="_blank" rel="noopener">
+                                    📄 Technical Report
                                 </a>
+
                             </div>
                         </div>
                     </div>
